# ecsc-2024-poland-writeups

./: .gitignore  readme.md
1fa/: readme.md  solve.py
board/: readme.md  solve.py
confidential-alchemy/: readme.md  step1.py  step3.py
confidential-alchemy/step2/: Cargo.toml
confidential-alchemy/step2/src/: main.rs
cpu-goes-brrr/: code.c  readme.md
cpu-goes-brrr/solve/: Cargo.toml
cpu-goes-brrr/solve/src/: main.rs
doggoworld/: readme.md
just-wonderful-turtles/: readme.md  solve.py
magiczna-cat/: readme.md  solve.py
not-crypto/: Main.java  readme.md
nwaf/: readme.md  solve.py
office-retribution/: readme.md
over-the-domain/: readme.md  solve.py
quirks/: qr.py  qr2text.py  readme.md
s69/: readme.md  solve.py
sanity-check/: readme.md
weathermaster/: index.js  readme.md  solve.py
zettabyte-file-search/: readme.md
