[package]
name = "solve"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.8", features = ["derive"] }
indicatif = "0.17.8"
sha2 = "0.9.8"
itertools = "0.13.0"
hex = "0.4"
rayon = "1.5.1"